--- a/src/index.css
+++ b/src/index.css
@@ -19,5 +19,5 @@ th {
 input[type="text"], input[type="number"], input[type="email"], input[type="date"], select {
   width: 100%;
   padding: 5px;
-  box-sizing: border-box; /* Ensures padding doesn't increase width */
+  box-sizing: border-box; 
 }
